# LogClient

./: .gitignore  CMakeLists.txt  LogClient.code-workspace
cmake/: DownloadDependencies.cmake
examples/: main.cpp
src/: LogClient.cpp
src/include/: LogClient.hpp
src/test/: CMakeLists.txt  MainTest.cpp  MainTest.hpp
test/: CMakeLists.txt
test/include/UnitTest/: UnitTest.hpp
test/src/UnitTest/: UnitTest.cpp
